<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string-array name="country_names">
        <item>Bhutan</item>
        <item>Colombia</item>
        <item>Italy</item>
    </string-array>
    <array name="country_icons">
        <item>@drawable/home_24</item>
        <item>@drawable/info_24</item>
        <item>@drawable/about_24</item>
    </array>


    // loginactivity //
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_dnr">Enter your DNr</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    //App strings//
    <string name="app_name">CoCeCl</string>
    <string name="app_fullname">Communication Center Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patman">Patienten Manager</string>
    <string name="title_activity_login">CoCeCl LogIn</string>
    <string name="title_activity_settings">Settings</string>

    //Allgemein//
    <string name="unit">Einheit</string>
    <string name="amb">Ambulanz</string>
    <string name="dnr">Dienstnummer</string>
    <string name="einsatz">Einsatz</string>
    <string name="newinc">Vorfall melden</string>
    <string name="phonebk">Telefonbuch/Funkkennungen</string>
    <string name="hospitallist">Krankenhausverzeichnis</string>
    <string name="nav">Navigation</string>
    <string name="phone">Anrufen</string>
    <string name="yes">JA</string>
    <string name="no">NEIN</string>
    <string name="status">STATUS</string>
    <string name="lsgeneral">Leitstelle Allgemein</string>
    <string name="lsbed">Leitstelle Bettenvergabe</string>

    //Settins strings//
    <string name="full_screen">Fullscreen</string>
    <string name="gps">GPS</string>
    <string name="radio">Funk</string>
    <string name="language">Sprache</string>
    <string name="end">Beenden</string>
    <string name="reloadconf">config neu laden</string>
    <string name="chooseserver">Server auswählen</string>

    // NAV DRAWER //
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Settings</item>
        <item>Kommunikation</item>
        <item>AmulanzInfo</item>
        <item>User</item>
        <item>PATMAN</item>
        <item>ICD-10 2015</item>
        <item>PTCA Bereitschaft</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_24</item>
        <item>@drawable/support_24</item>
        <item>@drawable/news_24</item>
        <item>@drawable/plus_24</item>
        <item>@drawable/contacts_24</item>
        <item>@drawable/briefcase_24</item>
        <item>@drawable/plus_24</item>
        <item>@drawable/about_24</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    //GCM//
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="welcome_txt">GCM App</string>
    <string name="email">Email Address</string>
    <string name="login">Register Me</string>
    <string name="defaultmsg">Message sent by server will appear here.</string>
    <string name="msg_title">Message</string>
    <string name="user_title">Hello User</string>

    <string name="gcm_defaultSenderId">Your Project ID</string>

    //Tab strings//
    <string name="einsatztab">Einsatzdaten</string>
    <string name="statustab">Statusfenster</string>
    <string name="abgabetab">Abgabeort</string>
    <string name="comm">Kommunikation</string>

    //Status Button strings//
    <string name="stbutton1">1 EB Funk</string>
    <string name="stbutton2">2 EB Station</string>
    <string name="stbutton3">3 ZBO</string>
    <string name="stbutton4">4 ABO</string>
    <string name="stbutton5">5 Selectiv</string>
    <string name="stbutton6">6 NEB</string>
    <string name="stbutton7">7 ZAO</string>
    <string name="stbutton8">8 AAO</string>
    <string name="stbutton9">9 AD</string>
    <string name="stbutton10">Int Unt</string>
    <string name="stbutton11">Bel/Verweigert</string>
    <string name="stbutton12">NOTRUF</string>
    <string name="stbutton13">anderes RM</string>

    <string name="qu">Einsatz übernommen</string>
    <string name="zbo">Zum Berufungsort</string>
    <string name="abo">Am Berufungsort</string>
    <string name="zao">Zum Abgabeort</string>
    <string name="aao">Am Abgabeort</string>
    <string name="eb">Einsatzbereit</string>
    <string name="neb">Nicht einsatzbereit</string>
    <string name="ad">Ausser Dienst</string>
    <string name="inciupdate">Achtung Einsatz Update!</string>

    <string name="stwe">Status weiterschalten?</string>

    <string name="refuel">Tanken</string>
    <string name="pause">Bereitschaft</string>
    <string name="getmaterial">Mat. nachfassen</string>

    //Einsatzdaten strings//
    <string name="edat">Einsatzdaten</string>
    <string name="bo">Berufungsort</string>
    <string name="bg">Berufungsgrund</string>
    <string name="brfr">Berufer</string>
    <string name="info">Information</string>
    <string name="eingeteiltefzg">Zugewiesene Einheiten</string>
    <string name="meldungen">Meldungen</string>
    <string name="ssig">Sondersignal</string>

    //Abgabeort strings//
    <string name="ao">Abgabeort</string>
    <string name="abt">Abteilung</string>
    <string name="tcnr">Transport/Casus-Nummer</string>

    //Bettenvergabe//
    <string name="intern">Intern</string>
    <string name="unfall">Unfall</string>
    <string name="chir">Chirurgie</string>
    <string name="hno">HNO</string>
    <string name="derma">Dermatologie</string>
    <string name="spezbett">Spezialbett</string>
    <string name="andbett">Andere Abteilung</string>
    <string name="lsbvanrufen">Leitstelle BV anrufen!</string>

    //Connection//
    <string name="mlsserver">MLS Server</string>
    <string name="connection">Verbindung</string>
    <string name="con">Internet verbunden</string>
    <string name="discon">Internet nicht verbunden</string>
    <string name="mlscon">Mit MLS verbunden</string>
    <string name="mlsdiscon">Nicht mit MLS verbunden</string>

    //String Array//
    <string-array name="Geschlecht">
        <item>männlich</item>
        <item>weiblich</item>
    </string-array>
    <string-array name="Atemweg">
        <item>---</item>
        <item>frei</item>
        <item>verengt</item>
        <item>teilverlegt</item>
        <item>verlegt</item>
    </string-array>
    <string-array name="Bewusstseinslage">
        <item>---</item>
        <item>wach</item>
        <item>somnolent</item>
        <item>sopor</item>
        <item>agitiert</item>
        <item>koma</item>
        <item>narkotisiert/sediert</item>
    </string-array>
    <string-array name="Pupillen">
        <item>---</item>
        <item>miosis</item>
        <item>mydriasis</item>
        <item>mittel</item>
        <item>entrundet</item>
        <item>lichtstarr</item>
        <item>nicht beurteilbar</item>
        <item>kein Corn.reflex</item>
        <item>Meningismus</item>
        <item>Herdblick ->li</item>
        <item>Herdblick ->re</item>
        <item>Anisokorie re>li</item>
        <item>Anisokorie li>re</item>
        <item>akute Sehstörung</item>
        <item>andere</item>
    </string-array>
    <string-array name="Frequenz">
        <item>---</item>
        <item>Tachykardie</item>
        <item>Tachykardie QRS schmal</item>
        <item>Tachykardie QRS breit</item>
        <item>Bradykardie</item>
    </string-array>
    <string-array name="Rhytmus">
        <item>---</item>
        <item>Sinusrhytmus</item>
        <item>Absolute Arrhytmie</item>
    </string-array>
    <string-array name="AVBlock">
        <item>---</item>
        <item>AV-Block I</item>
        <item>AV-Block II Typ Mobitz</item>
        <item>AV-Block II Typ Wenckebach</item>
        <item>AV-Block III</item>
    </string-array>
    <string-array name="VES">
        <item>---</item>
        <item>VES</item>
        <item>VES polytop</item>
        <item>VES Salven</item>
    </string-array>
    <string-array name="STStrecke">
        <item>---</item>
        <item>ST-Hebung</item>
        <item>ST-Senkung</item>
    </string-array>
    <string-array name="PEA">
        <item>---</item>
        <item>PEA</item>
        <item>Kammerflimmern/-flattern</item>
        <item>Asystolie</item>
        <item>Schrittmacherrhytmus</item>
    </string-array>
    <string-array name="Schenkelblock">
        <item>---</item>
        <item>Linksschenkelblock</item>
        <item>Rechtsschenkelblock</item>
    </string-array>
    <string-array name="Atmung">
        <item>---</item>
        <item>unauffällig</item>
        <item>Hyperventilation</item>
        <item>Dyspnoe</item>
        <item>Zyanose</item>
        <item>Spastik</item>
        <item>Rasselgeräusche</item>
        <item>Stridor</item>
        <item>Atemwegsverlegung</item>
        <item>Atemdepression</item>
        <item>Schnappatmung</item>
        <item>beatmeter Patient</item>
        <item>Apnoe</item>
        <item>andere Atemstörung</item>
    </string-array>
    <string-array name="Hautkolorit">
        <item>---</item>
        <item>rosig</item>
        <item>blass</item>
    </string-array>

</resources>
