<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.fmd.cocecl.InfoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15pt"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_style_1"
        android:gravity="center"
        android:hint="@string/amb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_dark_material_dark"
        android:textColorHint="@color/primary_dark_material_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/button15"
        android:layout_toStartOf="@+id/button15"
        android:background="@drawable/edittext_style_1"
        android:gravity="center"
        android:hint="@string/unit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_dark_material_dark"
        android:textColorHint="@color/primary_dark_material_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/button15"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/button15"
        android:layout_alignTop="@+id/textView3"
        android:background="@drawable/edittext_style_1"
        android:gravity="center"
        android:hint="@string/dnr"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_dark_material_dark"
        android:textColorHint="@color/primary_dark_material_dark" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/button63"
        android:layout_toEndOf="@+id/button63"
        android:layout_toRightOf="@+id/button63"
        android:drawableLeft="@drawable/ic_send_black_24dp"
        android:text="START" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button20"
        android:layout_alignLeft="@+id/button20"
        android:layout_alignRight="@+id/button20"
        android:layout_alignStart="@+id/button20"
        android:layout_alignTop="@+id/button14"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:text="@string/action_settings" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:ems="10"
        android:hint="version" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/button14"
        android:layout_toRightOf="@+id/button14"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_power_settings_new_black_24dp"
        android:enabled="true"
        android:onClick="exitbtn"
        android:text="@string/end" />

    <Button
        android:id="@+id/button63"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTop="@drawable/ic_local_taxi_black_18dp"
        android:onClick="btnunitinfo"
        android:text="Unit Info" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button14"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:background="@drawable/edittext_style_1"
        android:visibility="invisible" />

</RelativeLayout>