<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.fmd.cocecl.fragments.fielddataFragment">

    <TextView
        android:id="@+id/tasktype"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/edittext_style_1"
        android:gravity="center"
        android:hint="Einsatzart"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHint="@color/primary_dark_material_dark" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space3"
        android:layout_alignEnd="@+id/space3"
        android:layout_alignRight="@+id/space3"
        android:checked="false"
        android:clickable="false"
        android:enabled="true"
        android:hint="@string/ssig" />

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tasktype" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/space3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/space3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bofield"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tasktype"
                android:background="@drawable/edittext_style_1"
                android:clickable="false"
                android:editable="false"
                android:enabled="true"
                android:gravity="center"
                android:hint="@string/bo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark_material_dark"
                android:textColorHint="@color/primary_dark_material_dark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/bgfield"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bofield"
                android:background="@drawable/edittext_style_1"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/bg"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark_material_dark"
                android:textColorHint="@color/primary_dark_material_dark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/infofield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bgfield"
                android:background="@drawable/edittext_style_1"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/info"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark_material_dark"
                android:textColorHint="@color/primary_dark_material_dark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/brfrfield"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignEnd="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView8"
                android:layout_below="@+id/infofield"
                android:background="@drawable/edittext_style_1"
                android:clickable="true"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/brfr"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_dark_material_dark"
                android:textColorHint="@color/primary_dark_material_dark" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_navigation_black_18dp"
                android:enabled="true"
                android:onClick="navbo"
                android:text="@string/nav" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout3"
                android:background="#000000"></View>

            <TextView
                android:id="@+id/engtlfzg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView8"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView8"
                android:layout_below="@+id/brfrfield"
                android:enabled="false"
                android:text="@string/eingeteiltefzg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
